# SwarmRay

./: .gitignore  CMakeLists.txt  README.md
doc/: api.md
jsonserver/: CMakeLists.txt  main.cpp
server/jsonserver/: config.py  curl_test.sh  jsondb.py  main.py  swarmray.db  test.db  test.py
server/jsonserver/models/: __init__.py  report.py  run.py  task.py
server/jsonserver/views/: __init__.py  cors.py  run.py  status.py  task.py  todo.py
src/: main.cpp
src/app/: App.cpp  App.h
src/conf/: Config.cpp  Config.h  ConfigReader.cpp  ConfigReader.h
src/core/: langs.h
src/core/Command/: Command.cpp  Command.h
src/core/ProcManager/: ProcManager.cpp  ProcManager.h
src/core/Scheduler/: Scheduler.cpp  Scheduler.h
src/core/Task/: ExtFilter.cpp  ExtFilter.h  Task.cpp  Task.h  TaskManger.cpp  TaskManger.h
src/jsonserver/: CMakeLists.txt
src/libs/easyloggingpp/: easylogging++.h
src/libs/inih/: INIReader.cpp  ini.cpp
src/log/: ezlog.cpp  ezlog.h
src/scanner/: BaseScanner.h  CppScanner.cpp  CppScanner.h  JavascriptScanner.cpp  JavascriptScanner.h  JsScanner.cpp  JsScanner.h  ScannerFactory.cpp  ScannerFactory.h
src/scanner-extern/: plugin_sys_main.py
src/scanner-extern/plugins/: BasePlugin.py  __init__.py  clang_tidy_plugin.py  plugin_config.py
src/scanner-extern/plugins/post/: config.py  poster.py
src/scanner-extern/plugins/utils/: cmd_helper.py
src/scanner-extern/tests/: clang_test1.cpp
src/scanner-project/: codeql.py  config.py  jq_qldb_result.csv
src/scanner-project/databases/: readme.txt
src/scanner-project/databases/jq_qldb/: codeql-database.yml
src/scanner-project/databases/jq_qldb/db-cpp/default/: affectedbymacroexpansion.rel  affectedbymacroexpansion.rel.checksum  aggregate_array_init.rel  aggregate_array_init.rel.checksum  aggregate_field_init.rel  aggregate_field_init.rel.checksum  arraysizes.rel  arraysizes.rel.checksum  attribute_arg_value.rel  attribute_arg_value.rel.checksum  attribute_args.rel  attribute_args.rel.checksum  attributes.rel  attributes.rel.checksum  bitfield.rel  bitfield.rel.checksum  blockscope.rel  blockscope.rel.checksum  builtintypes.rel  builtintypes.rel.checksum  commentbinding.rel  commentbinding.rel.checksum  comments.rel  comments.rel.checksum  compgenerated.rel  compgenerated.rel.checksum  compilation_args.rel  compilation_args.rel.checksum  compilation_compiling_files.rel  compilation_compiling_files.rel.checksum  compilation_finished.rel  compilation_finished.rel.checksum  compilation_time.rel  compilation_time.rel.checksum  compilations.rel  compilations.rel.checksum  containerparent.rel  containerparent.rel.checksum  conversionkinds.rel  conversionkinds.rel.checksum  (+190 more)
src/scanner-project/databases/jq_qldb/db-cpp/default/cache/cached-strings/pools/: poolInfo
src/scanner-project/databases/jq_qldb/db-cpp/default/cache/cached-strings/tuple-pool/: tuplesi#0#TContent#iiiiii  tuplesi#0#TFlowVar#iiii  tuplesi#0#TIRVariable#iitiii  tuplesi#0#TInstruction#titi  tuplesi#0#TMemoryLocation#2#tititiiiiibi  tuplesi#0#TOperand#tititi  tuplesi#0#TPathNode#4#titititisi  tuplesi#0#TPathNode#5#titititisi  (+91 more)
src/scanner-project/databases/jq_qldb/db-cpp/default/cache/pages/: 00.pack  01.pack  02.pack  03.pack  06.pack  08.pack  09.pack  0a.pack  0c.pack  0d.pack  0e.pack  10.pack  11.pack  12.pack  13.pack  15.pack  19.pack  1b.pack  1c.pack  1f.pack  21.pack  23.pack  24.pack  26.pack  28.pack  29.pack  2a.pack  2c.pack  30.pack  31.pack  34.pack  35.pack  37.pack  38.pack  39.pack  3b.pack  3d.pack  3f.pack  40.pack  42.pack  (+122 more)
src/scanner-project/databases/jq_qldb/db-cpp/default/cache/predicates/: 00.pack  02.pack  03.pack  05.pack  06.pack  07.pack  09.pack  0a.pack  0c.pack  0d.pack  0e.pack  0f.pack  10.pack  11.pack  12.pack  13.pack  14.pack  15.pack  16.pack  17.pack  19.pack  1a.pack  1b.pack  1c.pack  1d.pack  1e.pack  1f.pack  20.pack  21.pack  22.pack  23.pack  24.pack  25.pack  26.pack  27.pack  28.pack  29.pack  2a.pack  2b.pack  2c.pack  (+196 more)
src/scanner-project/databases/jq_qldb/db-cpp/default/cache/relations/: 00.pack  01.pack  02.pack  03.pack  04.pack  05.pack  06.pack  07.pack  08.pack  09.pack  10.pack  11.pack  12.pack  13.pack  14.pack  15.pack  16.pack  17.pack  18.pack
src/scanner-project/databases/jq_qldb/db-cpp/default/idPool/: info
src/scanner-project/databases/jq_qldb/db-cpp/default/idPool/buckets/: info  page-000000
src/scanner-project/databases/jq_qldb/db-cpp/default/idPool/ids2/: info  page-000000
src/scanner-project/databases/jq_qldb/db-cpp/default/idPool/indices2/: info  page-000000
src/scanner-project/databases/jq_qldb/db-cpp/default/idPool/metadata/: info
src/scanner-project/databases/jq_qldb/db-cpp/default/idPool/pageDump/: page-000000000  page-000000001
src/scanner-project/databases/jq_qldb/db-cpp/default/pools/: poolInfo
src/scanner-project/databases/jq_qldb/db-cpp/default/pools/0/: info
src/scanner-project/databases/jq_qldb/db-cpp/default/pools/1/: info
src/scanner-project/databases/jq_qldb/results/codeql-cpp/Likely_bugs/Memory Management/: UninitializedLocal.bqrs
src/scanner-project/rules/cpp/.cache/: size
src/scanner/scanner-search/: search_engine.cpp  search_engine.h
src/scanner/scanner-syntax/: cpp_syntax_functions.cpp  cpp_syntax_functions.h  js_syntax_funtions.cpp  js_syntax_funtions.h
src/utils/: CmdParser.cpp  CmdParser.h  ExtFilter.cpp  ExtFilter.h  PathGenerator.cpp  PathGenerator.h  extFilter.cpp  extFilter.h
test/: CMakeLists.txt  CompileTest.cpp
test/googletest_lib/googletest/cmake/: internal_utils.cmake
test/utils_tests/: ExtFilter_Test.cpp  PathGenerator_Test.cpp
(+19 files in other folders)
